--- a/client/.prettierrc.json
+++ b/client/.prettierrc.json
@@ -1,5 +1,7 @@
 {
-  "singleQuote": true,
+  "semi": true,
   "trailingComma": "all",
-  "tabWidth": 4
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2
 }
